Added much more new logics